# metnum

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  PREREQUISITI.md  PROGRAMMA.md  README.md  appveyor.yml  build.ps1  build.sh  makefile  metnum.sln  plot_harm.plt  plot_quadratura.plt  vcpkg.json
.github/workflows/: ccpp.yml
grafica_fltk/: button_fltk.cpp  events_fltk.cpp  grafica_fltk.cpp  grafica_fltk.vcxproj  grafica_fltk.vcxproj.filters  grafica_lib.hpp  grafica_test.cpp  hello_fltk.cpp  makefile  mouse_fltk.cpp  packages.config  slider_fltk.cpp  slider_fltk.h
harm/: harm.cpp  harm.vcxproj  harm.vcxproj.filters  makefile
integratori/: Bat_eq_diff_Kutta.sh  Bat_eq_diff_orbits.sh  Bat_eq_diff_strobo.sh  Plot_eq_diff_Kutta_er.plt  Plot_eq_diff_orbits.plt  Plot_eq_diff_orbits_3.plt  Plot_eq_diff_strobo_2.plt  eq_diff_Kutta.cpp  eq_diff_orbits.cpp  eq_diff_strobo.cpp
langevin/: langevin.cpp  langevin.vcxproj  langevin.vcxproj.filters  makefile
quadratura/: makefile  plot_harm.plt  plot_quadrature.plt  quadratura.cpp  quadratura.vcxproj  quadratura.vcxproj.filters
random/: random.cpp  random_cpp11.cpp
simplettici/: makefile  simplettici.cpp  simplettici.vcxproj  simplettici.vcxproj.filters
wave/: makefile  wave.cpp  wave.vcxproj  wave.vcxproj.filters
z3/: makefile  plot_z3.plt  z3.cpp  z3.vcxproj  z3.vcxproj.filters
